--- a/winserver_hostname.yml
+++ b/winserver_hostname.yml
@@ -3,14 +3,23 @@
   hosts: "{{ target_host_name }}*"
 
   tasks:
+  # Warning Windows Current Active User that Automation is running
+  - name: Giving warning to the current user
+    win_say:
+      start_sound_path: C:\Windows\Media\ding.wav
+      msg: Warning, Windows name is now being changed. Prepare for reboot
+      voice: Microsoft Zira Desktop
+
   # Set Computer Hostname, we get name variable from inventory host variable
   - name: set windows hostname
     win_hostname:
       name: "{{ name }}"
     register: hostname_change_result
+
   - name: reboot if required
     win_reboot:
     when: hostname_change_result.reboot_required
+
   - name: wait for windows connection
     wait_for_connection:
     when: hostname_change_result.reboot_required
