update wait for connection

--- a/winserver_wait_connection.yml
+++ b/winserver_wait_connection.yml
@@ -2,6 +2,7 @@
 # Useful to wait for Windows readyness after startup or reboot
 - name: Wait until Windows is available (600 seconds)
   hosts: "{{ target_host_name }}*"
+  gather_facts: no
   tasks:
   - wait_for_connection:
 ...
