--- a/winserver_iis_test.yml
+++ b/winserver_iis_test.yml
@@ -1,7 +1,6 @@
 ---
 - name: Test HTTP Output
   hosts: "{{ target_host_name }}*" 
-  gather_facts: yes
 
   vars:
     - website_ip: "{{ ansible_ip_addresses[0] }}"
@@ -10,6 +9,7 @@
   - name: check HTTP status 200 from GET
     uri:
       url: "http://{{ website_ip }}"
+    delegate_to: localhost    
 
   - name: check if the word Ansible for Everyone is in the page contents
     uri:
@@ -17,6 +17,7 @@
       return_content: yes
     register: weboutput1
     failed_when: "'Automation for Everyone' not in weboutput1.content"
+    delegate_to: localhost
 
   - name: check if the word Ansible Workshops is in the page contents
     uri:
@@ -24,4 +25,5 @@
       return_content: yes
     register: weboutput2
     failed_when: "'Automation for Everyone' not in weboutput2.content"
+    delegate_to: localhost
 ...
