--- a/winserver_iis_test.yml
+++ b/winserver_iis_test.yml
@@ -7,23 +7,20 @@
   
   tasks:
   - name: check HTTP status 200 from GET
-    uri:
+    win_uri:
       url: "http://{{ website_ip }}"
-    delegate_to: localhost    
 
   - name: check if the word Ansible for Everyone is in the page contents
-    uri:
+    win_uri:
       url: "http://{{ website_ip }}"
       return_content: yes
     register: weboutput1
     failed_when: "'Automation for Everyone' not in weboutput1.content"
-    delegate_to: localhost
 
   - name: check if the word Ansible Workshops is in the page contents
-    uri:
+    win_uri:
       url: "http://{{ website_ip }}"
       return_content: yes
     register: weboutput2
     failed_when: "'Automation for Everyone' not in weboutput2.content"
-    delegate_to: localhost
 ...
