--- a/winserver_hostname.yml
+++ b/winserver_hostname.yml
@@ -2,11 +2,14 @@
 - name: Windows Server Change Hostname
   hosts: "{{ target_host_name }}*"
 
+  vars:
+  - windows_hostname: "Win2019IIS"
+
   tasks:
   # Set Computer Hostname, we get name variable from inventory host variable
   - name: set windows hostname
     win_hostname:
-      name: "{{ name }}"
+      name: "{{ windows_hostname }}"
     register: hostname_change_result
 
   - name: reboot if required
