update chocolatey plays

--- a/winserver_install_software.yml
+++ b/winserver_install_software.yml
@@ -3,13 +3,9 @@
   hosts: "{{ target_host_name }}*"
 
   tasks:
-  # Warning Windows Current Active User that Automation is running
-  - name: Giving warning to the current user
-    win_say:
-      start_sound_path: C:\Windows\Media\ding.wav
-      msg: Please stand by! Windows is installing {{ software_name }}
-      voice: Microsoft Zira Desktop
-
+  # Install/Update Software using Chocolatey.org package manager
+  # Chocolatey is going to be auto-installed if not present
+  # See https://chocolatey.org/packages for complete package list  
   - name: install software using Chocolatey.org
     win_chocolatey:
       name: "{{ software_name }}"
