--- a/winserver_share.yml
+++ b/winserver_share.yml
@@ -3,31 +3,28 @@
   hosts: "{{ target_host_name }}*"
 
   tasks:
-  - name: Add secret share
-    win_share:
-      name: internal
-      description: top secret share
-      path: C:\shares\internal
-      list: no
-      full: FKARNADI\Administrator,FKARNADI\feliz
-      read: FKARNADI\jono
-      deny: FKARNADI\steve
+  - name: ensure share directory is present
+    win_file:
+      path: "{{ share_path }}"
+      state: directory
 
-  - name: Add public company share
+  - name: modify directory sharing
     win_share:
-      name: company
-      description: top secret share
-      path: C:\shares\company
-      list: yes
-      full: FKARNADI\Administrator,FKARNADI\feliz
-      read: FKARNADI\steve
+      name: "{{ share_name }}"
+      description: "{{ share_description }}"
+      list: "{{ share_file_list }}"
+      full: "{{ share_full }}"
+      read: "{{ share_read }}"
+      deny: "{{ share_deny }}"
 
-  - name: Deny jono
-    win_share:
-      name: internal
-      description: top secret share
-      path: C:\shares\internal
-      list: no
-      deny: FKARNADI\jono
-
+  # Example
+  #- name: Add secret share
+  #  win_share:
+  #    name: internal
+  #    description: top secret share
+  #    path: C:\shares\internal
+  #    list: no
+  #    full: FKARNADI\Administrator,FKARNADI\feliz
+  #    read: FKARNADI\jono
+  #    deny: FKARNADI\steve
 ...
